[project]
name = "mlx-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "huggingface-hub>=0.26.2",
    "jinja2>=3.1.4",
    "mlx>=0.19",
    "numpy>=2.1.3",
    "plotly>=5.24.1",
    "protobuf>=5.28.3",
    "regex>=2024.11.6",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.20.3",
]
